Update distribution on the nodes involved in click

Calling updateDistribution function on the nodes
that are involved in a click (both mouseup and
mousedown nodes) to prevent dchecks when calculating
their parents

BUG=604981

Review URL: https://codereview.chromium.org/1907633002

Cr-Commit-Position: refs/heads/master@{#389906}

Former-commit-id: e2ee0b0adadd714acbe41ec0e3279243a6885236